# trt-custom-plugin

./: .gitignore  README.md  convert_GELU.ipynb  converter.py  do_train.py  requirements.txt  train_with_GELU.ipynb  trt_inference.py
dataset/: download_data.sh  make_validation.py  prepare_dataset.py
geluPlugin/: CMakeLists.txt  backup.cpp.cpp  geluPlugin.cpp  geluPlugin.cu  geluPlugin.h  serialize.hpp
geluPlugin/include/: geluPlugin.h  gpu_kernel.h
geluPluginv2/: CMakeLists.txt  geluKernel.h  geluPlugin.cpp  geluPlugin.cu  geluPlugin.h  script2build.sh
tf_utils/: model.py  test_cudnn.py
trt_utils/: converter.py  trt_inference.py
